tests/mut_poly_var_pair_cross_scope.test
let f: ([T]. T -> ([U]. U -> T/U)) = fun x -> fun y -> x;
####
SyntaxError: Illegal poly var pair.
let f: ([T]. T -> ([U]. U -> T/U)) = fun x -> fun y -> x;
                             ^~~
